--- a/Proyecto Final - Primera Entrega/public/css/style.css
+++ b/Proyecto Final - Primera Entrega/public/css/style.css
@@ -1,11 +1,12 @@
-.box-shadow {
-  box-shadow: 0 0 5px black;
-  border-radius: 10px;
+*{
+  margin: 0;
   padding: 10px;
 }
 
 form p {
   margin: 0;
+  font-style: bold;
+  font-family: helvetica, arial, sans-serif;
 }
 
 form input {
@@ -26,7 +27,7 @@ form input {
 }
 
 #chat span {
-  color: brown;
+  color: rgb(248, 229, 20);
 }
 
 #chat i {
