--- a/Proyecto Final - Primera Entrega/views/partials/footer.ejs
+++ b/Proyecto Final - Primera Entrega/views/partials/footer.ejs
@@ -1,4 +1,13 @@
-      </section>
-    </main>
-  </body>
-</html>
+<div class="container mt-5">
+  <div id="footer">
+   <style>
+      footer {
+      color:rgb(31, 31, 59); 
+      background-color:rgb(216, 151, 151);
+      height: 300px;
+      margin: 50px;
+      }
+  </style>  
+  <h1>Footer</h1>   
+  </div> 
+</div>
