--- a/Proyecto Final - Primera Entrega/views/partials/header.ejs
+++ b/Proyecto Final - Primera Entrega/views/partials/header.ejs
@@ -8,5 +8,5 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
     />
-    <title>EJS - <%= tituloWeb %> </title>
+    <title> <%= tituloWeb %> </title>
   </head>
